// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bczRLJ sc-gsnTZi fSpoJh eVzcKy"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bczRLJ sc-gsnTZi exPOae eVzcKy"
>
  foo
</button>
`;
